--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
     "axios": "^1.7.8",
+    "moment": "^2.30.1",
     "next": "15.0.3",
     "nookies": "^2.5.2",
     "react": "19.0.0-rc-66855b96-20241106",
